2010-10-06 Johannes Erdmann <johannes.erdmann@cern.ch>
	
	* InterfaceGoTopTree.cxx : require IsTopInputs; remove obsolte isolation (was not used anyway)
	* tag KLFitter-00-03-09

2010-10-05 Stefan Guindon <stefan.guindon@cern.ch>
	
	* LikelihoodBase.h: back to SetCutBTag - Consistency with TopKLFitter
	* tag KLFitter-00-03-08

2010-10-05 Stefan Guindon <stefan.guindon@cern.ch>
	
	* InterfaceGoTopTree.cxx: Include b-tagging weights
	* Fitter.cxx: Run b-tagging with FlagIntegrate
	* ReadConfigFile: Add cut btagging
	* runKLFitter.c : Include addition of config file b-tag cut value to Likelihood class
	* tag KLFitter-00-03-07

2010-10-04 Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>
	
	* InterfaceOutput.cxx: bug fix: matching information is again written out correctly 
	* tag KLFitter-00-03-06

2010-10-03 Johannes Erdmann <johannes.erdmann@cern.ch>
	
	* remove DetectorAtlas, Detector, ResDoubleGaussE
	* tag KLFitter-00-03-05

2010-10-03 Johannes Erdmann <johannes.erdmann@cern.ch>
	
	* change default constructor for DetectorBase and derived classes
	* tag KLFitter-00-03-04

2010-10-01 Johannes Erdmann <johannes.erdmann@cern.ch>
	
	* just a follow up tag on the changes already documented by Olaf
	* tag KLFitter-00-03-03

2010-10-01 Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>
	
	* implementation of the new TF for 7TeV ttbar:
		-distinguish: DetectorAtlas_7TeV / DetectorAtlas_10TeV
		-new ResDoubleGaussE_1: ljets/e @7TeV, ResDoubleGaussE_2: bjets @7TeV,
		 ResDoubleGaussE_3: ljets/bjets/e @10TeV
		-TF for muons is @7TeV ResDoubleGaussPt instead of single Gaussian
		-ASCII files with the parameters of the TF are now in transferfunctions/ttbar
	* 7TeV and 10TeV TF for ttbar can be chosen with two flags in config.conf: FlagIs7TeV / FlagIs10TeV
	* Note: 
		-This is not the final solution, because this is not general enough for all kinds 
		 of topologies and object definitions