@@ -10,6 +10,8 @@ FlagIsSignalMC = true
 FlagIs7TeV = true
 FlagIs10TeV = false
 MassTop = 172.5
-PathToOutputFile = output_2.root
+PathToOutputFile = output.root
 PathToInputFile = input.root
 IsBkg = false
+FlagTruthSel = false
+FlagAthenaComp = false
